--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  font-size: 10px;
+  color: #616161;
+  font-family: 'PT Mono', monospace;;
+
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --primary-green: #DCFFF1;
+  --light-green: #F4FEFA;
+  --white: #fff;
+
+  --category-specific: #FF71A6;
+  --category-general: #71A5FF;
+  --category-nonspecific: #71FFB3;
+
+  --h1-pink: #FF7ED0;
+  --h1-dark: #464545;
+  --primary-p: #616161;
+
+  --primary-button: #FBDEFF;
+
+  --border: 1px solid #adadad;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p, label {
+  font-size: 1.6rem;
 }
